--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,9 @@ owner:
   bio: 多少事，从来急，天地转，光阴迫，一万年太久，只争朝夕
   email: bowang1988@163.com
   Institute: https://auto.hdu.edu.cn/2020/0714/c3803a110745/page.htm
-  # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
-  # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  # twitter: lancecai2002
+  # twitter: xxxx
   github: wennboo
-  # linkedin: hanlincai
+  # linkedin: xxx
   scholar: https://scholar.google.com.sg/citations?user=5bHTfnwAAAAJ&hl=zh-CN
 
   
