--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ owner:
   avatar: wb0.png
   bio: 多少事，从来急，天地转，光阴迫，一万年太久，只争朝夕
   email: bowang1988@163.com
+  Title: Associate Professor
   Institute: https://auto.hdu.edu.cn/2020/0714/c3803a110745/page.htm
   # twitter: xxxx
   github: wennboo
