--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ links:
     url: 
   - title: Publications（论文）
     url: publications/
-  - title: Projects（项目）
+  - title: Projects（工程）
     url: projects/
   - title: Teams（团队）
     url: teams/
